# meta-pipe

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  FEASIBILITY_CHECKLIST.md  GETTING_STARTED.md  LICENSE  MIGRATION_2026-02-08.md  README.md  TOPIC.txt  serve-dashboard.sh
.claude/: settings.local.json
.githooks/: pre-commit
01_protocol/: eligibility.md  pico.yaml
05_extraction/: EXTRACTION_WORKFLOW.md  LLM_EXTRACTION_SUMMARY.md  MANUAL_REVIEW_SUMMARY.md  OUTCOME_DATA_REVIEW.md  data-dictionary.md
07_manuscript/: 00_abstract.md  01_introduction.md  02_methods.md  CITATION_MAPPING.md  REFERENCES_COMPLETION_SUMMARY.md  REFERENCES_USAGE_GUIDE.md  TABLES_FIGURES_STATUS.md
dashboard/: package.json  pnpm-lock.yaml  server.ts  tsconfig.tsbuildinfo  vite.config.ts
docs/: DOC_REFERENCE_AUDIT.md  MANUSCRIPT_ASSEMBLY.md  R_FIGURE_GUIDE.md  UNPAYWALL_ROBUST.md  WEB_EXTRACTION.md
ma-agent-teams/: SKILL.md
ma-data-extraction/: SKILL.md
ma-end-to-end/: SKILL.md
ma-fulltext-management/: SKILL.md
tests/: README.md  (+1 more)
tooling/python/: CLAUDE_CLI_FLAGS.md  ai_screen.py  analyze_unpaywall.py  bib_to_csv.py  check_key_trials_oa.py  check_outcome_completeness.py  consolidate_project_outputs.py  create_pdf_manifest.py  csv_to_bib_subset.py  download_oa_pdfs.py  extract_pdf_text.py  generate_prospero_protocol.py  init_project.py  jsonl_to_extraction_csv.py  llm_extract_cli.py  prepare_fulltext_review.py  project_meta.py  project_status.py  pyproject.toml  session_log.py  team_spawn_helper.py  update_manifest_with_results.py
tooling/python/tests/: test_project_status.py
(+366 files in other folders)
