[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.81.0",
    "bibtexparser>=1.4.4",
    "biopython>=1.86",
    "lxml>=5.3.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.10.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
